--- a/components/Slideshow.module.css
+++ b/components/Slideshow.module.css
@@ -44,6 +44,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  bottom: 15px;
   padding: 10px;
   width: 10px;
   height: 10px;
